oidc-client/oauth2-proxy/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: oauth-route
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /oauth2/
      name: kubeflow-oauth2-proxy-route
      route:
        - destination:
            host: oauth2-proxy.kubeflow.svc.cluster.local
            port:
              number: 8080
