oidc-client/oauth2-proxy/overlays/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: kubeflow-authz
  namespace: istio-system
spec:
  action: CUSTOM
  provider:
    name: kubeflow-oauth2-proxy
  rules:
    - to:
        - operation:
            hosts:
              - kubeflow.agi.zjuici.com
            paths:
              - /*
  selector:
    matchLabels:
      app: istio-ingressgateway
